--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.duzhaokun123.bilibilihd">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,10 +12,15 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.DevelopActivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ui.play.PlayActivity"></activity>
         <activity
-            android:name=".ui.UserSpaceActivity"
+            android:name=".ui.widget.PhotoViewActivity"
+            android:theme="@style/AppTheme.NoActionBar.Transparency" />
+        <activity android:name=".ui.JumpActivity" />
+        <activity
+            android:name=".ui.userSpace.UserSpaceActivity"
             android:theme="@style/AppTheme.NoActionBar.Transparency" />
         <activity
             android:name=".ui.VideoSearchActivity"
