--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
-        
+//        classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.0.0-rc01'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,7 +21,7 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        
+        maven { url "https://jitpack.io" }
     }
 }
 
