--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
+    //GSYVideoPlayer
+    implementation 'com.shuyu:GSYVideoPlayer:7.1.2'
 }
