--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.play.PlayActivity"></activity>
+        <activity android:name=".ui.userspace.FavoriteActivity"></activity>
+        <activity android:name=".ui.play.PlayActivity" />
         <activity
             android:name=".ui.PhotoViewActivity"
-            android:theme="@style/AppTheme.NoActionBar.Transparency"
+            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
-            android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"/>
+            android:theme="@style/AppTheme.NoActionBar.Transparency" />
         <activity android:name=".ui.JumpActivity" />
         <activity
-            android:name=".ui.userSpace.UserSpaceActivity"
+            android:name=".ui.userspace.UserSpaceActivity"
             android:theme="@style/AppTheme.NoActionBar.Transparency" />
         <activity
             android:name=".ui.VideoSearchActivity"
