--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,13 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            zipAlignEnabled true
         }
+
+        debug {
+            zipAlignEnabled false
+        }
+    
     }
     packagingOptions {
         pickFirst 'META-INF/kotlinx-io.kotlin_module'
@@ -50,11 +56,11 @@ dependencies {
     //bilibili-api
     implementation group: 'com.hiczp', name: 'bilibili-api', version: '0.1.1'
     //DrawerLayout
-    implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha03'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha04'
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -66,7 +72,7 @@ dependencies {
 //    implementation "androidx.cardview:cardview:1.0.0"
 //    implementation "com.google.android.material:material:1.1.0"
     //PhotoView
-    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
     //okhttp3
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
