--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61'
-//        classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.0.0-rc01'
+        classpath 'com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:8.0.0-rc01'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
