--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,15 @@ def getGitHash = { ->
     return stdout.toString().trim()
 }
 
+def getGitCommitCount = { ->
+    def stdout = new ByteArrayOutputStream()
+    exec {
+        commandLine "git", "rev-list", "dev", "--count"
+        standardOutput = stdout
+    }
+    return stdout.toString().trim()
+}
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
@@ -19,7 +28,7 @@ android {
         applicationId "com.duzhaokun123.bilibilihd"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 2
+        versionCode "${getGitCommitCount}".toInteger()
         versionName "0.1-git.${getGitHash}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
