--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,17 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
+            buildConfigField("String", "PROJECT_HOME_URL", "https://github.com/duzhaokun123/BilibiliHD")
         }
 
         debug {
             zipAlignEnabled false
+            buildConfigField("String", "PROJECT_HOME_URL", "\"https://github.com/duzhaokun123/BilibiliHD\"")
         }
 
     }
