--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
-            buildConfigField("String", "PROJECT_HOME_URL", "https://github.com/duzhaokun123/BilibiliHD")
+            buildConfigField("String", "PROJECT_HOME_URL", "\"https://github.com/duzhaokun123/BilibiliHD\"")
         }
 
         debug {
@@ -75,7 +75,7 @@ dependencies {
     //browser
     implementation 'androidx.browser:browser:1.2.0'
     //bilibili-api
-    implementation group: 'com.hiczp', name: 'bilibili-api', version: '0.1.2'
+    implementation group: 'com.hiczp', name: 'bilibili-api', version: '0.1.3'
     //DrawerLayout
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0-alpha04'
     //CircleImageView
@@ -87,7 +87,7 @@ dependencies {
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //XRecyclerView
     implementation 'com.jcodecraeer:xrecyclerview:1.6.0'
-    //AboutLibraries 由于奇怪的 BUG 无法使用, 为什么这么多 BUG 的
+    //AboutLibraries
     implementation 'com.mikepenz:aboutlibraries-core:8.0.0-rc01'
     implementation 'com.mikepenz:aboutlibraries:8.0.0-rc01'
 //    implementation "androidx.cardview:cardview:1.0.0"
