--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,60 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
+        android:resizeableActivity="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
+            android:name=".ui.download.DownloadActivity"
+            android:label="@string/download"
+            android:parentActivityName=".ui.main.MainActivity"></activity>
+
+        <service
+            android:name=".services.VideoDownloadService"
+            android:exported="false" />
+
+        <activity android:name=".ui.TestActivity" />
+        <activity android:name=".ui.ToolActivity" />
+        <activity android:name=".ui.UrlOpenActivity">
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="*.bilibili.com"
+                    android:scheme="http" />
+                <data
+                    android:host="*.bilibili.com"
+                    android:scheme="https" />
+            </intent-filter>
+            <intent-filter android:label="@string/app_name">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="bilibili" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.LogoutActivity"
+            android:label="@string/logout" />
+        <activity
             android:name=".ui.settings.LicenseActivity"
-            android:label="@string/license"></activity>
+            android:label="@string/license" />
         <activity android:name=".ui.userspace.FavoriteActivity" />
         <activity
             android:name=".ui.play.PlayActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
-            android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
             android:theme="@style/AppTheme.NoActionBar.TransparencyStatus" />
         <activity
             android:name=".ui.PhotoViewActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation"
-            android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
             android:theme="@style/AppTheme.NoActionBar.Transparency.Fullscreen" />
         <activity android:name=".ui.JumpActivity" />
