--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
             ndk {
-                abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86', 'x86_64'
+                abiFilters 'arm64-v8a', 'x86_64'
             }
         }
 
@@ -50,9 +50,12 @@ android {
 
     }
     packagingOptions {
-        pickFirst 'META-INF/kotlinx-io.kotlin_module'
-        pickFirst 'META-INF/atomicfu.kotlin_module'
-        pickFirst 'META-INF/kotlinx-coroutines-io.kotlin_module'
+        pickFirst 'META-INF/ktor-http.kotlin_module'
+        pickFirst 'META-INF/ktor-utils.kotlin_module'
+        pickFirst 'META-INF/kotlinx-coroutines-core.kotlin_module'
+        pickFirst 'META-INF/ktor-io.kotlin_module'
+        pickFirst 'META-INF/ktor-http-cio.kotlin_module'
+        pickFirst 'META-INF/ktor-client-core.kotlin_module'
     }
     compileOptions {
         sourceCompatibility = 1.8
@@ -73,7 +76,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.61'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.5'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -81,8 +85,10 @@ dependencies {
     //browser
     implementation 'androidx.browser:browser:1.2.0'
     //bilibili-api
-    implementation group: 'com.hiczp', name: 'bilibili-api', version: '0.2.0'
-    //DrawerLayout
+    implementation 'com.hiczp:bilibili-api:0.2.1'
+    implementation 'javax.xml.stream:stax-api:1.0-2'
+    implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
+//    DrawerLayout
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0-beta01'
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
@@ -102,7 +108,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha02'
     //okhttp3
-    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.5.0'
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
     //exoplayer
@@ -118,4 +124,8 @@ dependencies {
     implementation 'com.liulishuo.okdownload:sqlite:1.0.7'
     // provide okhttp to connect to backend
     implementation 'com.liulishuo.okdownload:okhttp:1.0.7'
+    //DanmakuFlameMaster
+    implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
+    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.25'
+    implementation 'com.github.ctiao:ndkbitmap-x86:0.9.25'
 }
