--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':app'
 rootProject.name='bilibili HD'
 // git://github.com/duzhaokun123/bilibili-api
-includeBuild '../../Kotlin/bilibili-api/'
+includeBuild '../../Kotlin/bilibili-api'
+includeBuild '../DanmakuFlameMaster'
