--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ allprojects {
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
+
+//    gradle.projectsEvaluated {
+//        tasks.withType(JavaCompile) {
+//            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+//        }
+//    }
 }
 
 task clean(type: Delete) {
