--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ include ':app'
 rootProject.name='bilibili HD'
 // git://github.com/duzhaokun123/bilibili-api
 includeBuild '../../Kotlin/bilibili-api'
+// git://github.com/duzhaokun123/DanmakuFlameMaster
 includeBuild '../DanmakuFlameMaster'
