--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -20,7 +20,7 @@
         <activity
             android:name=".ui.article.ArticleActivity"
             android:label=""
-            android:theme="@style/AppTheme.TransparencyActionBar"></activity>
+            android:theme="@style/AppTheme.TransparencyActionBar" />
         <activity
             android:name=".ui.download.DownloadActivity"
             android:label="@string/download"
@@ -79,8 +79,16 @@
             android:name=".ui.userspace.UserSpaceActivity"
             android:theme="@style/AppTheme.TransparencyActionBar" />
         <activity
-            android:name=".ui.VideoSearchActivity"
-            android:label="@string/search" />
+            android:name=".ui.SearchActivity"
+            android:label="@string/search"
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:configChanges="uiMode"
@@ -88,7 +96,11 @@
         <activity
             android:name=".ui.LoginActivity"
             android:label="@string/login" />
-        <activity android:name=".ui.main.MainActivity" />
+        <activity android:name=".ui.main.MainActivity">
+            <meta-data
+                android:name="android.app.default_searchable"
+                android:value=".ui.SearchActivity" />
+        </activity>
         <activity
             android:name=".ui.WelcomeActivity"
             android:configChanges="uiMode"
