--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,12 +22,12 @@ def getGitCommitCount = { ->
 }
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.duzhaokun123.bilibilihd"
         minSdkVersion 26
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode "${getGitCommitCount}".toInteger()
         versionName "0.1-git.${getGitHash}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -61,9 +61,8 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
-    dataBinding {
-        //noinspection DataBindingWithoutKapt
-        enabled = true
+    buildFeatures {
+        dataBinding = true
     }
 }
 
@@ -76,7 +75,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.71'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.5'
 
     //glide
@@ -93,7 +92,7 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.google.android.material:material:1.3.0-alpha01'
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
