完善弹幕设置

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
             android:name=".ui.settings.DanmakuTestActivity"
             android:configChanges="screenSize|smallestScreenSize|screenLayout|orientation|uiMode"
             android:label="@string/danmaku_test"
-            android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:launchMode="singleTop"></activity>
         <activity android:name=".ui.WebViewActivity" />
         <activity
             android:name=".ui.article.ArticleActivity"
