--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
@@ -88,7 +88,7 @@ dependencies {
     implementation 'javax.xml.stream:stax-api:1.0-2'
     implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
 //    DrawerLayout
-    implementation 'androidx.drawerlayout:drawerlayout:1.1.0-rc01'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.0'
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
@@ -105,7 +105,7 @@ dependencies {
 //    implementation "com.google.android.material:material:1.1.0"
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha03'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha04'
     //okhttp3
     implementation 'com.squareup.okhttp3:okhttp:4.5.0'
     //gson
