--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,9 +43,7 @@
 
         <activity android:name=".ui.TestActivity" />
         <activity android:name=".ui.ToolActivity" />
-        <activity
-            android:name=".ui.UrlOpenActivity"
-            android:configChanges="uiMode">
+        <activity android:name=".ui.UrlOpenActivity">
             <intent-filter android:label="@string/app_name">
                 <action android:name="android.intent.action.VIEW" />
 
