--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -97,7 +97,7 @@
             android:configChanges="uiMode"
             android:label="@string/settings" />
         <activity
-            android:name=".ui.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:label="@string/login" />
         <activity android:name=".ui.main.MainActivity">
             <meta-data
