--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,8 @@ android {
         pickFirst 'META-INF/ktor-client-core.kotlin_module'
     }
     compileOptions {
-        sourceCompatibility = 1.8
-        targetCompatibility = 1.8
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildFeatures {
         dataBinding = true
