--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,7 @@ dependencies {
 //    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-alpha05'
 //    // alternately
 //    implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.0-alpha05'
-
+    //MediaRouter
+    implementation 'androidx.mediarouter:mediarouter:1.1.0'
 
 }
