--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.mikepenz.aboutlibraries.plugin'
+apply plugin: 'com.google.protobuf'
 
 def getGitHash = { ->
     def stdout = new ByteArrayOutputStream()
@@ -85,8 +86,6 @@ dependencies {
     implementation 'androidx.browser:browser:1.2.0'
     //bilibili-api
     implementation 'com.hiczp:bilibili-api:0.2.1'
-    implementation 'javax.xml.stream:stax-api:1.0-2'
-    implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
 //    DrawerLayout
     implementation 'androidx.drawerlayout:drawerlayout:1.1.0'
     //CircleImageView
@@ -135,5 +134,27 @@ dependencies {
 //    implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.0-alpha05'
     //MediaRouter
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
+    //protobuf-lite
+    implementation 'com.google.protobuf:protobuf-lite:3.0.0'
+}
 
+protobuf {
+    protoc {
+        artifact = 'com.google.protobuf:protoc:3.7.0'
+    }
+    plugins {
+        javalite {
+            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
+        }
+    }
+    generateProtoTasks {
+        all().each { task ->
+            task.builtins {
+                remove java
+            }
+            task.plugins {
+                javalite {}
+            }
+        }
+    }
 }
