--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.mikepenz.aboutlibraries.plugin'
 apply plugin: 'com.google.protobuf'
 
 def getGitHash = { ->
@@ -33,16 +32,16 @@ android {
         versionName "0.1-git.${getGitHash}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("boolean", "IS_GIT_VERSION", "true")
+        proguardFiles
+        multiDexEnabled true
     }
+
     buildTypes {
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
-            ndk {
-                abiFilters 'arm64-v8a', 'x86_64'
-            }
         }
 
         debug {
@@ -62,8 +61,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
     buildFeatures {
         dataBinding = true
+    }
+    dependenciesInfo {
+        includeInApk false
+        includeInBundle false
     }
 }
 
@@ -77,7 +83,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.8'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -91,22 +97,19 @@ dependencies {
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha01'
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //XRecyclerView
     implementation 'com.jcodecraeer:xrecyclerview:1.6.0'
-    //AboutLibraries
-    implementation 'com.mikepenz:aboutlibraries-core:8.0.0-rc01'
-    implementation 'com.mikepenz:aboutlibraries:8.0.0-rc01'
 //    implementation "androidx.cardview:cardview:1.0.0"
 //    implementation "com.google.android.material:material:1.1.0"
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha04'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
     //okhttp3
-    implementation 'com.squareup.okhttp3:okhttp:4.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
     //exoplayer
@@ -135,7 +138,11 @@ dependencies {
     //MediaRouter
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
     //protobuf-lite
-    implementation 'com.google.protobuf:protobuf-lite:3.0.0'
+    implementation 'com.google.protobuf:protobuf-lite:3.0.1'
+    //html-textview
+    implementation 'org.sufficientlysecure:html-textview:3.9'
+    //ktx
+    implementation 'androidx.core:core-ktx:1.3.1'
 }
 
 protobuf {
