--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.google.protobuf'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
+    id 'com.google.protobuf'
+}
 
 def getGitHash = { ->
     def stdout = new ByteArrayOutputStream()
@@ -154,6 +156,8 @@ dependencies {
     implementation 'org.sufficientlysecure:html-textview:3.9'
     //ktx
     implementation 'androidx.core:core-ktx:1.3.1'
+    //flexbox-layout
+    implementation 'com.google.android:flexbox:2.0.1'
 }
 
 protobuf {
