--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,11 @@ android {
         includeInApk false
         includeInBundle false
     }
+    applicationVariants.all { variants ->
+        variants.outputs.all {
+            outputFileName = "${defaultConfig.applicationId}_v${defaultConfig.versionName}_${buildType.name}.apk"
+        }
+    }
 }
 
 dependencies {
@@ -156,6 +161,8 @@ dependencies {
     implementation 'org.sufficientlysecure:html-textview:3.9'
     //ktx
     implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.activity:activity-ktx:1.1.0'
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
     //flexbox-layout
     implementation 'com.google.android:flexbox:2.0.1'
 }
