--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,6 +109,8 @@ dependencies {
     implementation 'androidx.browser:browser:1.2.0'
     //bilibili-api
     implementation 'com.hiczp:bilibili-api:0.2.1'
+    implementation 'javax.xml.stream:stax-api:1.0-2'
+    implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
 //    DrawerLayout
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     //CircleImageView
@@ -167,8 +169,8 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.1'
 
     //core
-    implementation 'androidx.core:core:1.5.0-alpha02'
-    implementation 'androidx.core:core-ktx:1.5.0-alpha02'
+    implementation 'androidx.core:core:1.5.0-alpha03'
+    implementation 'androidx.core:core-ktx:1.5.0-alpha03'
 }
 
 protobuf {
