--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ def isHasChange = { ->
     return !stdout.toString().trim().isEmpty()
 }
 
+def isRunningOnTravis = { ->
+    return System.getenv("TRAVIS") == "true"
+}
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
@@ -40,13 +44,22 @@ android {
         minSdkVersion 26
         targetSdkVersion 30
         versionCode getGitCommitCount()
-        versionName "0.1-git.${getGitHash()}${isHasChange() ? "-changed" : ""}"
+        versionName "0.1-git.${getGitHash()}${isRunningOnTravis() ? "-travis" : ""}${isHasChange() ? "-changed" : ""}"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("boolean", "IS_GIT_VERSION", "true")
         multiDexEnabled true
         resConfigs "en", "zh-rCN"
     }
-
+    if (isRunningOnTravis()) {
+        signingConfigs {
+            release {
+                storeFile = file("../ReleaseKey.jks")
+                storePassword = System.getenv("release_key")
+                keyAlias = "key0"
+                keyPassword = System.getenv("release_key")
+            }
+        }
+    }
     buildTypes {
 
         release {
@@ -54,6 +67,9 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             zipAlignEnabled true
+            if (isRunningOnTravis()) {
+                signingConfig signingConfigs.release
+            }
         }
 
         debug {
@@ -109,14 +125,14 @@ dependencies {
     implementation 'androidx.browser:browser:1.2.0'
     //bilibili-api
     implementation 'com.hiczp:bilibili-api:0.2.1'
-    implementation 'javax.xml.stream:stax-api:1.0-2'
+    implementation 'javax.xml.stream:stax-api:1.0'
     implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
 //    DrawerLayout
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
@@ -126,7 +142,7 @@ dependencies {
 //    implementation "com.google.android.material:material:1.1.0"
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha05'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
     //okhttp3
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     //gson
@@ -152,9 +168,9 @@ dependencies {
 
     //lifecycle
     // ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-alpha07'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0-beta01'
     // LiveData
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-alpha07'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0-beta01'
 
     //MediaRouter
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
@@ -169,8 +185,8 @@ dependencies {
     implementation 'com.google.android:flexbox:2.0.1'
 
     //core
-    implementation 'androidx.core:core:1.5.0-alpha03'
-    implementation 'androidx.core:core-ktx:1.5.0-alpha03'
+    implementation 'androidx.core:core:1.5.0-alpha04'
+    implementation 'androidx.core:core-ktx:1.5.0-alpha04'
 }
 
 protobuf {
