--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,20 +115,24 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.3.9'
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
     //browser
     implementation 'androidx.browser:browser:1.2.0'
+
     //bilibili-api
     implementation 'com.hiczp:bilibili-api:0.3.0'
     implementation 'javax.xml.stream:stax-api:1.0'
     implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
+
 //    DrawerLayout
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
+
     //CircleImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
@@ -136,17 +140,21 @@ dependencies {
 //    implementation 'androidx.navigation:navigation-fragment:2.2.1'
 //    implementation 'androidx.navigation:navigation-ui:2.2.1'
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
     //XRecyclerView
     implementation 'com.jcodecraeer:xrecyclerview:1.6.0'
 //    implementation "androidx.cardview:cardview:1.0.0"
 //    implementation "com.google.android.material:material:1.1.0"
+
     //PhotoView
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
     //okhttp3
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
+
     //gson
     implementation 'com.google.code.gson:gson:2.8.6'
+
     //exoplayer
     implementation 'com.google.android.exoplayer:exoplayer-core:2.11.3'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.11.3'
@@ -163,8 +171,6 @@ dependencies {
     implementation 'com.github.ctiao:DanmakuFlameMaster:0.9.25'
 //    implementation 'com.github.ctiao:ndkbitmap-armv7a:0.9.25'
 //    implementation 'com.github.ctiao:ndkbitmap-x86:0.9.25'
-    //Preference
-    implementation 'androidx.preference:preference:1.1.1'
 
     //lifecycle
     // ViewModel
@@ -174,19 +180,28 @@ dependencies {
 
     //MediaRouter
     implementation 'androidx.mediarouter:mediarouter:1.1.0'
+
     //protobuf-lite
     implementation 'com.google.protobuf:protobuf-lite:3.0.1'
+
     //html-textview
     implementation 'org.sufficientlysecure:html-textview:3.9'
+
     //ktx
     implementation 'androidx.activity:activity-ktx:1.1.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
     //flexbox-layout
     implementation 'com.google.android:flexbox:2.0.1'
 
     //core
     implementation 'androidx.core:core:1.5.0-alpha04'
     implementation 'androidx.core:core-ktx:1.5.0-alpha04'
+
+    //preferencex
+    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.takisoft.preferencex:preferencex:1.1.0'
+    implementation 'com.takisoft.preferencex:preferencex-simplemenu:1.1.0'
 }
 
 protobuf {
